--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,57 +1,107 @@
 ---
 apiVersion: apps/v1
-kind: 	Deployment
+kind: Deployment
 metadata: 
-  name: secert santa
+  name: frontend
+  namespace: three2-tier
+  labels: 
+    role: frontend
+    env: demo
 spec:
   minReadySeconds: 3
   replicas: 2
   selector:
     matchLabels:
-      app: secretsanta
+      role: frontend
   strategy:
     type: RollingUpdate
     rollingUpdate:
       maxSurge: 50%
-      maxUnavailable: 50%    
+      maxUnavailable: 50%      
   template:
     metadata:
-      name: santa
-      labels:
-        app: secretsanta
+      name: front
+      labels: 
+        role: frontend
     spec:
       containers:
-        - image: meena835/secretsanta
-          name: cart
+        - image: meena835/tws:frontend
+          name: tws
+          env:
+          - name: REACT_APP_BACKEND
+            value: "api:3500"
           ports:
-            - containerPort: 8080
-              protocol: TCP
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 8080
-          livenessProbe:
-            tcpSocket: 
-              port: 8080
-          resources:
-            requests:
-              memory: "64Mi"
-              cpu: "250m"
-            limits:
-              memory: "128Mi"
-              cpu: "500m"  
-
+            - containerPort: 3000
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: ss
+  namespace: three2-tier
 spec: 
   type: LoadBalancer
   selector:
-    app: secretsanta
+    role: frontend
   ports:
     - protocol: TCP
-      port: 35000
-      targetport: 8080                        
+      port: 3000 
+      targetPort: 3000  
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata: 
+  name: api
+  namespace: three2-tier
+  labels: 
+    role: api
+    env: demo
+spec: 
+  replicas: 2
+  strategy: 
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 25%
+  selector: 
+    matchLabels:
+      role: api
+  template:
+    metadata:
+      labels:
+        role: api
+    spec:
+      containers:
+        - name: api
+          image: meena835/twsbackend:latest
+          ports:
+            - containerPort: 3500
+          livenessProbe: 
+            httpGet:
+              path: /ok
+              port: 3500
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /ok
+              port: 3500
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            successThreshold: 1
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: api
+  namespace: three2-tier
+spec: 
+  ports:
+    - port: 3500
+      targetPort: 3500
+      protocol: TCP
+  type: ClusterIP
+  selector:
+    role: api                      
